2002-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Rationalise so that all conversion operations
	go through the two new functions.  Gets rid of a load of old code.

2002-05-10  Adam Fedor  <fedor@gnu.org>

	* Source/Additions/GSXML.m: Change libxml strings to UTF8
	(makeText:) New.
	Add GSXMLDummy for MinGW
	* Source/Additions/libgnustep-base.def: Remove GSXMLHandler.
	(patch from Kai Henningsen).

2002-05-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdnc.m: Make gdnc log to syslog by default, and close
	stdin, stdout, stderr to run as daemon.
	* Source/NSUser.m: Restructured path generation code slightly.
	Added support for system-wide .GNUsteprc with force options.
	Removed use of FORCE_USER_ROOT and FORCE_DEFAULTS_ROOT
	* Source/Base/gsdoc: Document the .GNUsteprc files.
	* Source/NSArray.m: Fix bug with GC pointed out by James Knight

2002-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Insert port information to URL passed
	to proxy.

2002-05-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundle.m
	Use fileSystemRepresentation instead of cString to get the file 
	name to load. 
	
2002-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: When launching under windoze, don't forget to
	use the fileSystemRepresentation of the program name.

2002-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Fix function prototype ... gets rid of
	compiler warning.
	* Source/GNUmakefile: remove o_vscanf.c ... unused
	* Source/o_vscanf.c: remove unused file.
	* Source/mframe.m: Fix compiler warning about unused function.
	* Source/GSFormat.m: Fix compiler warning about unused var.
	* Source/NSDebug.m: Fix compiler warning about unused var.
	* Source/externs.m: Fix compiler warnings ... move some exceptions
	to source files relating to where they are declared.
	* Source/NSArchiver.m: define exception.
	* Source/NSConnection.m: define exception.
	* Source/NSPort.m: define exception.